feat: added searchbox styles

--- a/src/App.scss
+++ b/src/App.scss
@@ -11,3 +11,4 @@
 @import "./scss/utilities/grid";
 @import "./scss/utilities/badge-icon";
 @import "./scss/utilities/navigation";
+@import "./scss/utilities/search-box";
