--- a/src/components/SearchBox/style.scss
+++ b/src/components/SearchBox/style.scss
@@ -8,11 +8,13 @@
     width: 100%;
     background: #FFF;
     position: absolute;
-    min-height: 50px;
     border: 1px solid #dae1e7;
+    max-height: 300px;
+    overflow-y: scroll;
     .search__list {
       .search__item {
         padding: 10px;
+        cursor: pointer;
         border-bottom: 1px solid #dae1e7;
       }
     }
