--- a/src/components/SearchBox/style.scss
+++ b/src/components/SearchBox/style.scss
@@ -16,6 +16,9 @@
         padding: 10px;
         cursor: pointer;
         border-bottom: 1px solid #dae1e7;
+        &:hover {
+          background: #efefef;
+        }
       }
     }
   }
